<resources>
    <string name="app_name">ndk_sample</string>
    <string name="get_line">get Line</string>
    <string name="sum">sum</string>
    <string name="result">result</string>
    <string name="x">x</string>
    <string name="plus">+</string>
    <string name="y">y</string>
    <string name="log">log</string>
    <string name="text">text</string>
    <string name="comma">,</string>
    <string name="number">number</string>
    <string name="notice0">\"Access Java class field from C++\"\n\nProcessing at C++\n - Set String field value to new string \"Hello \"\n - int field value +10</string>
    <string name="access">Access</string>
    <string name="please_fill_in_the_input_field">Please fill in the input field</string>
    <string name="result_0">result 0</string>
    <string name="result_1">result 1</string>
    <string name="result_2">result 2</string>
    <string name="result_3">result 3</string>
    <string name="call_exception">Call\nException</string>
    <string name="start_task">Start Task</string>
</resources>