<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".jni.JNICallBackFieldActivity">

    <TableLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>

            <EditText
                android:id="@+id/i"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:maxLength="9"
                android:hint="@string/x"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/plus"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/j"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:maxLength="9"
                android:hint="@string/y"
                android:inputType="number" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/result"
        app:layout_constraintTop_toBottomOf="@id/sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>